[package]
name = "conductor-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-tungstenite = "0.26"
futures-util = "0.3"
sysinfo = "0.33"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
url = "2.5"
reqwest = { version = "0.12", features = ["json"] }
