[package]
name = "conductor-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
sysinfo = "0.33"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
url = "2.5"
# Use rustls stack with system root certs
tokio-tungstenite = { version = "0.26", features = ["__rustls-tls"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-native-certs = "0.7"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rcon = { version = "0.6", default-features = false, features = ["rt-tokio"] }